--- a/app/views/books/_select_sort.html.erb
+++ b/app/views/books/_select_sort.html.erb
@@ -6,7 +6,7 @@
   <%= hidden_field_tag :sort_order, "desc" unless params[:sort_order].present? %>
 
   <div class="dropdown dropdown-bottom dropdown-end w-full">
-    <div tabindex="0" role="button" class="btn bg-transparent w-full flex justify-start">
+    <div tabindex="0" role="button" class="btn bg-transparent w-full flex justify-start rounded-xl">
       <div class="hidden md:flex items-center justify-start w-4/5 gap-2">
         <span class="text-gray-400">Sort By:</span>
         <span class="font-semibold text-gray-700">
