Redesign wish page

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,66 +4,8 @@
     <div class="drawer-content px-6 md:px-12">
       <%= render "layouts/navbar" %>
       <div class="space-y-6">
-        <div class="flex">
-          <div class="w-full lg:w-9/12">
-            <div class="dropdown">
-              <div tabindex="0" role="button" class="m-1 flex justify-center items-center align-middle gap-2 mb-5">
-                <h1 class="md:text-3xl lg:text-4xl md:font-bold font-semibold text-xl">Books</h1>
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
-                </svg>
-              </div>
-              <ul tabindex="0" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
-                <li>
-                  <details open>
-                    <summary>
-                      <%= link_to books_path, class: "w-full flex items-center justify-center space-x-2 hover:bg-transparent hover:text-white #{(current_page?(books_path) || current_page?(root_path)) ? 'text-black' : 'text-gray-200'}" do %>
-                        Books
-                      <% end %>
-                    </summary>
-                    <ul>
-                      <li><a>+ Add Book</a></li>
-                    </ul>
-                  </details>
-                </li>
-                <li>
-                  <details open>
-                    <summary>
-                      <%= link_to wishes_path, class: "w-full flex items-center justify-center space-x-2 hover:bg-transparent hover:text-white #{current_page?(wishes_path) ? 'text-black' : 'text-gray-200'}" do %>
-                        Wishes
-                      <% end %>
-                    </summary>
-                    <ul>
-                      <li><a>+ Add Wish</a></li>
-                    </ul>
-                  </details>
-                </li>
-              </ul>
-            </div>
-
-            <div class="flex flex-wrap gap-2" data-controller="book-search">
-              <%= render "category_filters" %>
-            </div>
-
-          </div>
-
-          <div class="hidden lg:grid w-4/12 gap-6 max-w-lg justify-left items-end">
-            <%= render "search_bar" %>
-
-
-            <div class="w-full flex gap-5">
-              <div class="w-4/6 flex justify-end">
-                <%= render "select_sort" %>
-              </div>
-
-              <div class="w-2/6 flex justify-start">
-                <%= render "select_filter" %>
-              </div>
-            </div>
-          </div>
-        </div>
+        <%= render "sub_navbar" %>
       </div>
-      <div class="divider"></div>
       <h2 class="text-2xl text-gray-800 mb-6 font-semibold">
         <% if params[:reviewer_id].present? %>
           <% reviewer = User.find_by(id: params[:reviewer_id]) %>
