--- a/app/views/shared/_select_sort.html.erb
+++ b/app/views/shared/_select_sort.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: books_path, method: :get, local: true, class: "w-full" do %>
+<%= form_with url: current_controller == 'books' ? books_path : wishes_path, method: :get, local: true, class: "w-full" do %>
   <% params.except(:sort_by, :sort_order, :controller, :action).each do |key, value| %>
     <%= hidden_field_tag key, value %>
   <% end %>
