--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -1,32 +1,32 @@
-<% content_for :title, "Wishes" %>
-<%= render 'layouts/drawer' do %>
-  <div class="px-6 md:px-12">
-    <%= render "layouts/wishlist_navbar" %>
+<div class="px-6 md:px-12">
+<%= render "layouts/navbar" %>
+    <div class="space-y-6">
+      <%= render "books/sub_navbar" %>
+    </div>
 
-    <div id="wishes" class="w-full h-full">
-      <% if @wishes.any? %>
-        <div class="flex flex-wrap">
-          <% @wishes.each do |wish| %>
-            <%= render wish %>
-          <% end %>
-        </div>
-      <% else %>
-        <div class="w-full h-full flex justify-center items-center">
-          <div class="w-70 grid justify-center items-center">
-            <div class="m-auto">
-              <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
-                <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
-              </svg>
-            </div>
-            <p class="text-center mt-5 mb-3">Every great library starts with a wish.<p>
-            <div class="m-auto">
-              <%= link_to new_wish_path, class: "text-gray-900 text-md btn rounded-xl h-8" do %>
-                + Add Wish
-              <% end %>
-            </div>
+  <div id="wishes" class="w-full h-full">
+    <% if @wishes.any? %>
+      <div class="flex flex-wrap justify-center">
+        <% @wishes.each do |wish| %>
+          <%= render wish %>
+        <% end %>
+      </div>
+    <% else %>
+      <div class="w-full h-full flex justify-center items-center">
+        <div class="w-70 grid justify-center items-center">
+          <div class="m-auto">
+            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+              <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+            </svg>
+          </div>
+          <p class="text-center mt-5 mb-3">Every great library starts with a wish.<p>
+          <div class="m-auto">
+            <%= link_to new_wish_path, class: "text-gray-900 text-md btn rounded-xl h-8" do %>
+              + Add Wish
+            <% end %>
           </div>
         </div>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</div>
