Redesign form pages

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
  <div data-controller="book-review">
   <div class="drawer drawer-end">
     <input id="review-drawer" type="checkbox" class="drawer-toggle">
-    <div class="drawer-content px-6 md:px-12">
+    <div class="drawer-content">
       <%= render "layouts/navbar" %>
       <div class="space-y-6">
         <%= render "sub_navbar" %>
