--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body data-controller="book-review">
 
 
-    <main>
+    <main class="px-6 md:px-12">
       <%= render 'layouts/flash' %>
       <%= yield %>
     </main>
