--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="px-6 md:px-12">
+<div>
 <%= render "layouts/navbar" %>
     <div class="space-y-6">
       <%= render "books/sub_navbar" %>
