--- a/app/views/wishes/index.html.erb
+++ b/app/views/wishes/index.html.erb
@@ -1,7 +1,7 @@
 <div>
 <%= render "layouts/navbar" %>
     <div class="space-y-6">
-      <%= render "books/sub_navbar" %>
+      <%= render "shared/sub_navbar" %>
     </div>
 
   <div id="wishes" class="w-full h-full">
