--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,7 +4,7 @@
     <div class="drawer-content">
       <%= render "layouts/navbar" %>
       <div class="space-y-6">
-        <%= render "sub_navbar" %>
+        <%= render "shared/sub_navbar" %>
       </div>
       <h2 class="text-2xl text-gray-800 mb-6 font-semibold">
         <% if params[:reviewer_id].present? %>
