--- a/app/views/shared/_sub_navbar.erb
+++ b/app/views/shared/_sub_navbar.erb
@@ -29,7 +29,7 @@
 
     <div class="flex flex-wrap gap-2" data-controller="book-search">
         <% if current_controller == 'books' %>
-            <%= render "category_filters" %>
+            <%= render "books/category_filters" %>
         <% else %>
             <button class="border-2 border-gray-50 text-gray-500 py-3 px-7 rounded-xl font-semibold">
                 <%= link_to new_wish_path do %>+ Add Wish<% end %>
@@ -44,7 +44,7 @@
     <div class="w-full flex gap-5">
       <div class="w-2/6 flex justify-start">
         <% if current_controller == 'books' %>
-            <%= render "select_filter" %>
+            <%= render "books/select_filter" %>
         <% end %>
       </div>
 
