Make design responsive

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag dom_id(book), class: "card w-full md:w-1/2 2xl:w-[38rem]" do %>
+<%= turbo_frame_tag dom_id(book), class: "card w-full md:w-1/2 2xl:w-[38rem] items-center" do %>
   <div class="w-11/12 h-full flex items-center justify-between shadow-xl relative lg:cursor-default cursor-pointer rounded-xl">
     <div
         data-book-id="<%= book.id %>"
