--- a/app/views/shared/_search_bar.html.erb
+++ b/app/views/shared/_search_bar.html.erb
@@ -1,5 +1,5 @@
-<%= form_with url: current_controller == 'books' ? books_path : wishes_path, method: :get, local: true, class: "grid space-y-4 hidden lg:flex " do |f| %>
-  <label class="input bg-white border-gray-150 rounded-2xl border-1 hidden lg:flex h-12 w-full">
+<%= form_with url: current_controller == 'books' ? books_path : wishes_path, method: :get, local: true, class: "grid space-y-4 flex " do |f| %>
+  <label class="input bg-white border-gray-150 rounded-2xl border-1 flex h-12 w-full">
     <%= f.text_field :query, value: params[:query], placeholder: "Search", class: "grow py-6 w-full text-md pl-2" %>
     <div>
       <div class="flex items-center justify-center">
