--- a/app/views/shared/_sub_navbar.erb
+++ b/app/views/shared/_sub_navbar.erb
@@ -2,7 +2,7 @@
   <div class="w-full lg:w-9/12">
     <div class="dropdown">
       <div tabindex="0" role="button" class="m-1 flex justify-center items-center align-middle gap-3 mb-5">
-        <h1 class="md:text-3xl lg:text-4xl md:font-bold font-semibold text-xl">
+        <h1 class="text-3xl lg:text-4xl md:font-bold font-semibold">
           <%= current_controller == 'books' ? 'Books' : 'Wishes' %>
         </h1>
         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
@@ -54,5 +54,14 @@
     </div>
   </div>
 </div>
+
+<div class="lg:hidden flex items-center gap-6">
+  <%= render "shared/search_bar" %>
+
+  <div class="ml-auto md:w-56">
+    <%= render "shared/select_sort" %>
+  </div>
+</div>
+
 
 <div class="divider"></div>
