--- a/app/views/wishes/_wish.html.erb
+++ b/app/views/wishes/_wish.html.erb
@@ -1,5 +1,5 @@
-<div class="w-full md:w-1/3 2xl:w-[18rem] md:pb-5 pb-0">
-  <div class="w-11/12 flex items-center justify-between">
+<div class="w-full md:w-1/3 2xl:w-[18rem] pb-0 flex justify-center">
+  <div class="w-12/12 flex items-center justify-center">
     <%= turbo_frame_tag dom_id(wish), class: "card shadow-xl relative space-y-3" do %>
 
         <div class="card bg-base-100 overflow-hidden">
