--- a/app/views/wishes/new.html.erb
+++ b/app/views/wishes/new.html.erb
@@ -1,17 +1,21 @@
 <% content_for :title, "New wish" %>
 
-<%= render "layouts/navbar" %>
-
-<div class="h-full w-full flex items-center justify-center">
-
-  <div class="border-1 border-gray-100 p-8 py-12 rounded-3xl text-gray-200 w-[30rem] overflow-y-scroll max-h-11/12">
-    <div class="text-center mb-12 space-y-3">
-      <h2 class="text-gray-700 text-3xl font-extrabold">Create Wish</h2>
-      <p class="text-gray-200">Fill out the details of the book below.</p>
-    </div>
-
-    <%= render "form", wish: @wish %>
+<div class="h-screen">
+  <div class="h-1/8">
+    <%= render "layouts/navbar" %>
   </div>
-</div>
 
+  <div class="w-full flex items-center justify-center h-7/8">
+
+    <div class="border-1 border-gray-100 p-8 py-12 rounded-3xl text-gray-200 w-[30rem] overflow-y-scroll max-h-11/12">
+      <div class="text-center mb-12 space-y-3">
+        <h2 class="text-gray-700 text-3xl font-extrabold">Create Wish</h2>
+        <p class="text-gray-200">Fill out the details of the book below.</p>
+      </div>
+
+      <%= render "form", wish: @wish %>
+    </div>
+  </div>
+
+</div>
 
