--- a/app/views/books/_book_grid.html.erb
+++ b/app/views/books/_book_grid.html.erb
@@ -1,6 +1,29 @@
 <div class="pb-10" data-controller="category">
   <div class="flex justify-center flex-wrap" id="books-container">
     <%= turbo_stream_from 'books', class: "hidden" %>
-    <%= render partial: "book", collection: books %>
+
+    <% if books.any? %>
+      <%= render partial: "book", collection: books %>
+    <% else %>
+      <div class="w-full mt-16 flex justify-center items-center">
+        <div class="w-70 text-center">
+          <div class="flex items-center justify-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+              <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+            </svg>
+          </div>
+
+          <% if params[:query].present? %>
+            <p class="text-gray-600 text-lg mb-3">
+              No books found for "<strong><%= params[:query] %></strong>"
+            </p>
+          <% elsif params[:reviewer_id].present? && User.find_by(id: params[:reviewer_id]).nil? %>
+            <p class="mt-5 mb-3 text-lg md:text-2xl text-gray-600">Reviewer not found.</p>
+          <% else %>
+            <p class="mt-5 mb-3 text-lg md:text-2xl text-gray-600">No books found.</p>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
