--- a/app/views/shared/_sub_navbar.erb
+++ b/app/views/shared/_sub_navbar.erb
@@ -51,7 +51,7 @@
   <div class="hidden lg:grid w-3/12 gap-6 max-w-lg justify-left items-end">
     <%= render "shared/search_bar" %>
 
-    <div class="w-full flex gap-5">
+    <div class="w-full flex gap-5 justify-center items-center">
       <div class="w-2/6 flex justify-start">
         <% if current_controller == 'books' %>
           <%= render "books/select_filter" %>
